# jaasper

./: .gitignore  Dockerfile.api  Dockerfile.monitor  Dockerfile.worker  LICENSE  README.md  commands  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.monitor.txt  requirements.txt
.github/workflows/: build.yaml  test.yaml
dependencies/: requirements.api.txt  requirements.worker.txt
jaasper/: __init__.py
jaasper/blocks/data/: datetime.py  json.py
jaasper/blocks/storage/aws/: credentials.py  s3.py
jaasper/flows/hello/: main.py
jaaspr/: app.py  models.py  serialization.py
jaaspr/config/api/: __init__.py  wsgi.py
jaaspr/config/worker/: __init__.py
jaaspr/core/: enums.py
jaaspr/tasks/: __init__.py  do_work.py  do_work_periodically.py
jaaspr/tasks/scheduling/: __init__.py
observability/prometheus/: prometheus.yaml
scripts/: __init__.py  enums.py  export.py
tasks/: __init__.py  constants.py  enums.py  execution.py  types.py
testbed/: docker-compose.yml
testbed/.archive/: docker-compose.bak
testbed/volume/cache/: machine.json
tests/: test_serialization.py
tests/core/: test_enums.py
