[tool.poetry]
name = "jaaspr"
version = "0.1.0"
description = "the Jobs as a Service, Provisioned Runtime"
authors = ["Emmanuel I. Obi <withtwoemms@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.api.dependencies]
flask = "^3.0.3"
waitress = "^3.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}

[tool.poetry.group.worker.dependencies]
celery = "^5.4.0"
redis = "^5.2.0"

[tool.poetry.scripts]
export-all-deps = "scripts.export:all_dependencies"
export-api-deps = "scripts.export:api_dependencies"
export-worker-deps = "scripts.export:worker_dependencies"

[build-system]
requires = ["poetry-core==1.8.4"]
build-backend = "poetry.core.masonry.api"
